--- a/bsc/templates/planetarium/post_new_form.html
+++ b/bsc/templates/planetarium/post_new_form.html
@@ -1,5 +1,10 @@
 {% extends 'base_sidebar.html' %}
 
 {% block content %}
-{{ form }}
+<form action="/blogs/{{ blog_slug }}/posts/new/" method="post">{% csrf_token %}
+  <table>
+  {{ form }}
+   <tr><td colspan="2"><input type="submit" name="submit" value="Submit" /></td></tr>
+  </table>
+</form>
 {% endblock %}
